dernières modifications pour améliorer les performances:focus bouton version mobile, corrections de liens CDN et ajout pour l'image de bannière page d'acceuil

--- a/css/style.css
+++ b/css/style.css
@@ -344,11 +344,14 @@ a:hover {
 
 .navbar-toggle {
     margin: 10px 10px 0 0;
-    border: 0px;
 }
 
 .navbar-toggle:hover {
     background: transparent!important;
+}
+
+.navbar-toggle:focus {
+    border: 2px solid black;
 }
 
 .navbar-toggle .icon-bar {
